# titan

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
.learnings/: ERRORS.md  FEATURE_REQUESTS.md  LEARNINGS.md
agents/wolf/: AGENT.md  MEMORY.md  SKILLS.md
docs/: ARCHITECTURE.md  BACKTEST_POLICY.md  ENVIRONMENTS.md
src/titan/: agent.py  checks.py  cli.py  promote.py
src/titan.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/titan/backtest/: __init__.py  momentum_backtest.py  runner.py
src/titan/brokers/: alpaca_broker.py  polymarket_broker.py
src/titan/config/: settings.py
src/titan/data/: alpaca_bars.py  polymarket_data.py
src/titan/portfolio/: state.py
src/titan/reporting/: state_writer.py  tick_reporter.py
src/titan/risk/: governor.py
src/titan/signals/: copy_trade.py  ma_crossover.py  polymarket_odds.py
tests/: test_agent_tick.py  test_backtest.py  test_ma_crossover.py  test_momentum_backtest.py  test_polymarket_signals.py  test_portfolio_state.py  test_risk_governor.py
